--- a/簡單小教學.md
+++ b/簡單小教學.md
@@ -1,1 +1,20 @@
-1
+<1>第一步驟:註冊GitHub
+===================
+<2>Repositories
+================
+(1)新增Repositories
+-----------------
+(2)刪除Repositories
+--------------
+(3)在Repositories加入檔案
+------------
+(4)在Repositories創建資料夾
+------------
+<3>編輯檔案
+================
+(1)檔案名稱+.md
+-----------------
+(2)標題
+-----------------
+(3)
+-----------------
