--- a/簡單小教學.md
+++ b/簡單小教學.md
@@ -1,6 +1,6 @@
 <1>第一步驟:註冊GitHub
 ===================
-1.google:GitHub<
+1.google:GitHub\<br>
 2.進入官網後點選:Sing Up 註冊
 3.Username不能用可以加加看大寫或-
 4.註冊完成後去信箱收信
