--- a/簡單小教學.md
+++ b/簡單小教學.md
@@ -5,13 +5,18 @@
 3.Username不能用可以加加看大寫或-<br>
 4.註冊完成後去信箱收信<br>
 
-<2>Repositories
+<2>Repositories(倉庫)
 ================
 (1)新增Repositories
 -----------------
-
+1.到自己的GitHub首頁<br>
+2.點選Repositories標籤<br>
+3.右上方有一個綠綠的New 點下去<br>
+4.Repository name輸入名稱(只能英文)<br>
+5.最下方綠色Create repository 點下去<br>
 (2)刪除Repositories
 --------------
+
 (3)在Repositories加入檔案
 ------------
 (4)在Repositories創建資料夾
