--- a/簡單小教學.md
+++ b/簡單小教學.md
@@ -18,6 +18,11 @@
 (2)刪除Repositories
 --------------
 
+1.點到要刪除的Repositories<br>
+2.上方標籤列，最右邊有一個Setting標籤 點下去<br>
+3.在Setting標籤頁中最下面"Danger Zone"裡的"Delete this repository"標籤點下去<br>
+4.在輸入框中輸入檔名(提示訊息中"Please type 粗體字 to confirm."粗體字就是檔名 直接輸入就可以刪除了)<br>
+
 (3)在Repositories加入檔案
 ------------
 (4)在Repositories創建資料夾
