--- a/簡單小教學.md
+++ b/簡單小教學.md
@@ -25,6 +25,10 @@
 
 (3)在Repositories加入檔案
 ------------
+有兩種方法:第一種是上傳電腦裡的檔案，第二種是創新檔案
+####上傳檔案
+=============
+
 (4)在Repositories創建資料夾
 ------------
 <3>編輯檔案
