--- a/簡單小教學.md
+++ b/簡單小教學.md
@@ -7,24 +7,22 @@
 
 <2>Repositories(倉庫)
 ================
-(1)新增Repositories
------------------
+### (1)新增Repositories
 1.到自己的GitHub首頁<br>
 2.點選Repositories標籤<br>
 3.右上方有一個綠綠的New 點下去<br>
 4.Repository name輸入名稱(只能英文)<br>
 5.最下方綠色Create repository 點下去<br>
 
-(2)刪除Repositories
---------------
+###(2)刪除Repositories
 
 1.點到要刪除的Repositories<br>
 2.上方標籤列，最右邊有一個Setting標籤 點下去<br>
 3.在Setting標籤頁中最下面"Danger Zone"裡的"Delete this repository"標籤點下去<br>
 4.在輸入框中輸入檔名(提示訊息中"Please type 粗體字 to confirm."粗體字就是檔名 直接輸入就可以刪除了)<br>
 
-(3)在Repositories加入檔案
-------------
+### (3)在Repositories加入檔案
+
 有兩種方法:第一種是上傳電腦裡的檔案，第二種是創新檔案
 
 #### 上傳檔案
