--- a/簡單小教學.md
+++ b/簡單小教學.md
@@ -28,13 +28,13 @@
 #### 上傳檔案
 #### 創檔案
 
-(4)在Repositories創建資料夾
-------------
+###(4)在Repositories創建資料夾
+
 <3>編輯檔案
 ================
-(1)檔案名稱+.md
------------------
-(2)標題
------------------
-(3)
------------------
+###(1)檔案名稱+.md
+
+###(2)標題
+
+###(3)
+
