--- a/簡單小教學.md
+++ b/簡單小教學.md
@@ -26,15 +26,11 @@
 有兩種方法:第一種是上傳電腦裡的檔案，第二種是創新檔案
 
 #### 上傳檔案
+1.到要加入檔案的Repositories裡
+2.中間偏又有一排可點選的標籤，選擇"Upload files"
+3.點選中間:choose your files
+4.選擇電腦中檔案，點選下方綠色框框"commit changes"後即上傳成功
 #### 創檔案
 
 ###(4)在Repositories創建資料夾
-
-<3>編輯檔案
-================
-###(1)檔案名稱+.md
-
-###(2)標題
-
-###(3)
 
