--- a/簡單小教學.md
+++ b/簡單小教學.md
@@ -26,11 +26,16 @@
 有兩種方法:第一種是上傳電腦裡的檔案，第二種是創新檔案
 
 #### 上傳檔案
-1.到要加入檔案的Repositories裡
-2.中間偏又有一排可點選的標籤，選擇"Upload files"
-3.點選中間:choose your files
-4.選擇電腦中檔案，點選下方綠色框框"commit changes"後即上傳成功
-#### 創檔案
+1.到要加入檔案的Repositories裡<br>
+2.中間偏又有一排可點選的標籤，選擇"Upload files"<br>
+3.點選中間:choose your files<br>
+4.選擇電腦中檔案，點選下方綠色框框"commit changes"後即上傳成功<br>
 
-###(4)在Repositories創建資料夾
+#### 創檔案
+1.到要加入檔案的Repositories裡<br>
+2.中間偏又有一排可點選的標籤，選擇"Create new files"<br>
+3.輸入檔名(可以放中文)並寫一些文字在裡面<br>
+4.點選下方綠色框框"commit new files"後即成功<br>
+
+### (4)在Repositories創建資料夾
 
