--- a/簡單小教學.md
+++ b/簡單小教學.md
@@ -21,21 +21,26 @@
 3.在Setting標籤頁中最下面"Danger Zone"裡的"Delete this repository"標籤點下去<br>
 4.在輸入框中輸入檔名(提示訊息中"Please type 粗體字 to confirm."粗體字就是檔名 直接輸入就可以刪除了)<br>
 
-### (3)在Repositories加入檔案
+### (3)在Repositories創建資料夾
+1.到要加入資料夾的Repositories<br>
+2.中間偏又有一排可點選的標籤，選擇"Create new files"<br>
+3.輸入檔名時加斜線"/"<br>
+EX1:檔名為:A/B --> 意思為B檔案在A資料夾之中<br>
+EX2:檔名為:A/B/C -->意思為c檔案在B資料夾之中，B資料夾在A資料夾之中<br>
+
+### (4)在Repositories加入檔案
 
 有兩種方法:第一種是上傳電腦裡的檔案，第二種是創新檔案
 
 #### 上傳檔案
-1.到要加入檔案的Repositories裡<br>
+1.到要加入檔案的Repositories或資料夾裡<br>
 2.中間偏又有一排可點選的標籤，選擇"Upload files"<br>
 3.點選中間:choose your files<br>
 4.選擇電腦中檔案，點選下方綠色框框"commit changes"後即上傳成功<br>
 
 #### 創檔案
-1.到要加入檔案的Repositories裡<br>
+1.到要加入檔案的Repositories或資料夾裡<br>
 2.中間偏又有一排可點選的標籤，選擇"Create new files"<br>
-3.輸入檔名(可以放中文)並寫一些文字在裡面<br>
+3.輸入檔名(可以放中文)<br>
 4.點選下方綠色框框"commit new files"後即成功<br>
-
-### (4)在Repositories創建資料夾
 
