--- a/簡單小教學.md
+++ b/簡單小教學.md
@@ -8,39 +8,39 @@
 <2>Repositories(倉庫)
 ================
 ### (1)新增Repositories
-1.到自己的GitHub首頁<br>
-2.點選Repositories標籤<br>
-3.右上方有一個綠綠的New 點下去<br>
-4.Repository name輸入名稱(只能英文)<br>
-5.最下方綠色Create repository 點下去<br>
+    1.到自己的GitHub首頁
+    2.點選Repositories標籤
+    3.右上方有一個綠綠的New 點下去
+    4.Repository name輸入名稱(只能英文)
+    5.最下方綠色Create repository 點下去
 
 ### (2)刪除Repositories
 
-1.點到要刪除的Repositories<br>
-2.上方標籤列，最右邊有一個Setting標籤 點下去<br>
-3.在Setting標籤頁中最下面"Danger Zone"裡的"Delete this repository"標籤點下去<br>
-4.在輸入框中輸入檔名(提示訊息中"Please type 粗體字 to confirm."粗體字就是檔名 直接輸入就可以刪除了)<br>
+    1.點到要刪除的Repositories
+    2.上方標籤列，最右邊有一個Setting標籤 點下去
+    3.在Setting標籤頁中最下面"Danger Zone"裡的"Delete this repository"標籤點下去
+    4.在輸入框中輸入檔名(提示訊息中"Please type 粗體字 to confirm."粗體字就是檔名 直接輸入就可以刪除了)
 
 ### (3)在Repositories創建資料夾
-1.到要加入資料夾的Repositories<br>
-2.中間偏又有一排可點選的標籤，選擇"Create new files"<br>
-3.輸入檔名時加斜線"/"<br>
-EX1:檔名為:A/B --> 意思為B檔案在A資料夾之中<br>
-EX2:檔名為:A/B/C -->意思為c檔案在B資料夾之中，B資料夾在A資料夾之中<br>
+    1.到要加入資料夾的Repositories
+    2.中間偏又有一排可點選的標籤，選擇"Create new files"
+    3.輸入檔名時加斜線"/"
+    EX1:檔名為:A/B --> 意思為B檔案在A資料夾之中
+    EX2:檔名為:A/B/C -->意思為c檔案在B資料夾之中，B資料夾在A資料夾之中
 
 ### (4)在Repositories加入檔案
 
 有兩種方法:第一種是上傳電腦裡的檔案，第二種是創新檔案
 
 #### 上傳檔案
-1.到要加入檔案的Repositories或資料夾裡<br>
-2.中間偏又有一排可點選的標籤，選擇"Upload files"<br>
-3.點選中間:choose your files<br>
-4.選擇電腦中檔案，點選下方綠色框框"commit changes"後即上傳成功<br>
+    1.到要加入檔案的Repositories或資料夾裡
+    2.中間偏又有一排可點選的標籤，選擇"Upload files"
+    3.點選中間:choose your files
+    4.選擇電腦中檔案，點選下方綠色框框"commit changes"後即上傳成功
 
 #### 創檔案
-1.到要加入檔案的Repositories或資料夾裡<br>
-2.中間偏又有一排可點選的標籤，選擇"Create new files"<br>
-3.輸入檔名(可以放中文)<br>
-4.點選下方綠色框框"commit new files"後即成功<br>
+    1.到要加入檔案的Repositories或資料夾裡
+    2.中間偏又有一排可點選的標籤，選擇"Create new files"
+    3.輸入檔名(可以放中文)
+    4.點選下方綠色框框"commit new files"後即成功
 
