Update 編輯.md文法 .md

--- a/編輯.md文法 .md
+++ b/編輯.md文法 .md
@@ -23,5 +23,17 @@
 ###### 六級標題  
 
 #### 第二種:=-法
+    =-法就是在標題下方加=跟-，範例如下:
+    要放超過三個=或-喔
+    大標題
+    >======
+    中標題
+    >------
+
+在-與=前刪掉>，呈現出來會變下面這樣，相當於前面的一級標題(#)跟二級標題(##)
+大標題
+======
+中標題
+------
 
 ### (3)
