--- a/編輯.md文法 .md
+++ b/編輯.md文法 .md
@@ -14,7 +14,7 @@
     #####五級標題  
     ######六級標題
 
-在#與標題之間必須空一格，呈現出來會變下面這樣
+*在#與標題之間必須空一格，呈現出來會變下面這樣
 # 一級標題  
 ## 二級標題  
 ### 三級標題  
@@ -30,7 +30,7 @@
     中標題
     >------
 
-在-與=前刪掉>，呈現出來會變下面這樣，相當於前面的一級標題(#)跟二級標題(##)
+*在-與=前刪掉>，呈現出來會變下面這樣，相當於前面的一級標題(#)跟二級標題(##)
 
 大標題
 ======
