--- a/編輯.md文法 .md
+++ b/編輯.md文法 .md
@@ -1,4 +1,4 @@
-`編輯`.md
+編輯.md
 ================
 ### (1)檔案名稱+.md
     要能有大標題等等讓人好閱讀的畫面，檔名必須用.md
@@ -30,14 +30,14 @@
     中標題
     >------
 
-* 在-與=前刪掉>，`呈現`出來會變下面這樣，相當於前面的一級標題(#)跟二級標題(##)
+* 在-與=前刪掉>，呈現出來會變下面這樣，相當於前面的一級標題(#)跟二級標題(##)
 
 大標題
 ======
 中標題
 ------
 
-### (3)加入有底色的文字框框
+### (3)加入有底色的`文字框框`
     在文字前加Tab即可，範例如下
         框框框
         框框框
