Update 編輯.md文法 .md

--- a/編輯.md文法 .md
+++ b/編輯.md文法 .md
@@ -1,9 +1,9 @@
 編輯.md
 ================
-### (1)檔案名稱+.md
+## (1)檔案名稱+.md
     要能有大標題等等讓人好閱讀的畫面，檔名必須用.md
 
-### (2)標題
+## (2)標題
 有分兩種表示方法
 #### 第一種:加#法
     加#法就是在標題前加#，範例如下:
@@ -37,7 +37,7 @@
 中標題
 ------
 
-### (3)加入有底色的`文字框框`
+## (3)加入有底色的`文字框框`
     在文字前加Tab即可，範例如下
         框框框
         框框框
@@ -46,6 +46,7 @@
     框框框
     框框框
 
-### (4)加入圖標
-### (5)加入程式碼
-### (6)加入圖片
+## (4)加入符號
+
+## (5)加入程式碼
+## (6)加入圖片
